--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="preload" href="dmz_alt_arrow.png">
   <link rel="preload" href="dmz_alt_help.png">
   <link rel="preload" href="dmz_alt_text.png">
+  <link rel="preload" href="pointer_win10.png">
   <body>
   </body>
 </html>
