--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="preload" href="dmz_alt_help.png">
   <link rel="preload" href="dmz_alt_text.png">
   <link rel="preload" href="pointer_win10.png">
+  <link rel="preload" href="win10pointer.png"
   <body>
   </body>
 </html>
