--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <link rel="preload" href="dmz_alt_help.png">
   <link rel="preload" href="dmz_alt_text.png">
   <link rel="preload" href="pointer_win10.png">
-  <link rel="preload" href="win10pointer.png"
+  <link rel="preload" href="win10pointer.png">
+  <link re="preload" href="busy.gif">
   <body>
   </body>
 </html>
