--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="preload" href="dmz_alt_text.png">
   <link rel="preload" href="pointer_win10.png">
   <link rel="preload" href="win10pointer.png">
-  <link re="preload" href="busy.gif">
+  <link rel="preload" href="busy.gif">
+  <link rel="preload" href="wallpaper.jpg">
   <body>
   </body>
 </html>
