--- a/index.html
+++ b/index.html
@@ -9,6 +9,56 @@
   <link rel="preload" href="win10pointer.png">
   <link rel="preload" href="busy.gif">
   <link rel="preload" href="wallpaper.jpg">
+  <link rel="preload" href="dmz/X_cursor.png">
+<link rel="preload" href="dmz/bd_double_arrow.png">
+<link rel="preload" href="dmz/bottom_left_corner.png">
+<link rel="preload" href="dmz/bottom_right_corner.png">
+<link rel="preload" href="dmz/bottom_side.png">
+<link rel="preload" href="dmz/bottom_tee.png">
+<link rel="preload" href="dmz/circle.png">
+<link rel="preload" href="dmz/color-picker.png">
+<link rel="preload" href="dmz/copy.png">
+<link rel="preload" href="dmz/cross.png">
+<link rel="preload" href="dmz/crossed_circle.png">
+<link rel="preload" href="dmz/crosshair.png">
+<link rel="preload" href="dmz/dnd-ask.png">
+<link rel="preload" href="dmz/dnd-copy.png">
+<link rel="preload" href="dmz/dnd-link.png">
+<link rel="preload" href="dmz/dnd-move.png">
+<link rel="preload" href="dmz/dnd-none.png">
+<link rel="preload" href="dmz/dotbox.png">
+<link rel="preload" href="dmz/dragging.png">
+<link rel="preload" href="dmz/fd_double_arrow.png">
+<link rel="preload" href="dmz/grabbing.png">
+<link rel="preload" href="dmz/hand1.png">
+<link rel="preload" href="dmz/hand2.png">
+<link rel="preload" href="dmz/left_ptr.png">
+<link rel="preload" href="dmz/left_side.png">
+<link rel="preload" href="dmz/left_tee.png">
+<link rel="preload" href="dmz/link.png">
+<link rel="preload" href="dmz/ll_angle.png">
+<link rel="preload" href="dmz/lr_angle.png">
+<link rel="preload" href="dmz/move.png">
+<link rel="preload" href="dmz/pencil.png">
+<link rel="preload" href="dmz/plus.png">
+<link rel="preload" href="dmz/question_arrow.png">
+<link rel="preload" href="dmz/right_ptr.png">
+<link rel="preload" href="dmz/right_side.png">
+<link rel="preload" href="dmz/right_tee.png">
+<link rel="preload" href="dmz/sb_down_arrow.png">
+<link rel="preload" href="dmz/sb_h_double_arrow.png">
+<link rel="preload" href="dmz/sb_left_arrow.png">
+<link rel="preload" href="dmz/sb_right_arrow.png">
+<link rel="preload" href="dmz/sb_up_arrow.png">
+<link rel="preload" href="dmz/sb_v_double_arrow.png">
+<link rel="preload" href="dmz/tcross.png">
+<link rel="preload" href="dmz/top_left_corner.png">
+<link rel="preload" href="dmz/top_right_corner.png">
+<link rel="preload" href="dmz/top_side.png">
+<link rel="preload" href="dmz/top_tee.png">
+<link rel="preload" href="dmz/ul_angle.png">
+<link rel="preload" href="dmz/ur_angle.png">
+<link rel="preload" href="dmz/xterm.png">
   <body>
   </body>
 </html>
