--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 <link rel="preload" href="dmz/ul_angle.png">
 <link rel="preload" href="dmz/ur_angle.png">
 <link rel="preload" href="dmz/xterm.png">
+  <link rel="preload" href="wait_chromeos_non-animated.png">
   <body>
   </body>
 </html>
