--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 <link rel="preload" href="dmz/ur_angle.png">
 <link rel="preload" href="dmz/xterm.png">
   <link rel="preload" href="wait_chromeos_non-animated.png">
+  <link rel="preload" href="link.png"
   <body>
   </body>
 </html>
