--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 <link rel="preload" href="dmz/ur_angle.png">
 <link rel="preload" href="dmz/xterm.png">
   <link rel="preload" href="wait_chromeos_non-animated.png">
-  <link rel="preload" href="link.png"
+  <link rel="preload" href="link.png">
+  <link rel="preload" href="12463224643.png">
   <body>
   </body>
 </html>
