--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
   <link rel="preload" href="wait_chromeos_non-animated.png">
   <link rel="preload" href="link.png">
   <link rel="preload" href="12463224643.png">
+  <link rel="preload" href="AstraClock.png">
   <body>
   </body>
 </html>
