--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
   <link rel="preload" href="link.png">
   <link rel="preload" href="12463224643.png">
   <link rel="preload" href="AstraClock.png">
+  <link rel="preload" href="JS.js.png">
   <body>
   </body>
 </html>
