--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
   <link rel="preload" href="12463224643.png">
   <link rel="preload" href="AstraClock.png">
   <link rel="preload" href="JS.js.png">
+  <link rel="preload" href="text.png">
   <body>
   </body>
 </html>
