--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype HTML>
 <html>
   <title>Resources</title>
+  <link rel="preload" href="LSI.png">
   <link rel="preload" href="dmz_alt_pointer.png">
   <link rel="preload" href="dmz_alt_arrow.png">
   <link rel="preload" href="dmz_alt_help.png">
