--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
   <link rel="preload" href="AstraClock.png">
   <link rel="preload" href="JS.js.png">
   <link rel="preload" href="text.png">
+  <link rel="preload" href="AbrilFatface-Regular.ttf"
   <body>
   </body>
 </html>
