--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
   <link rel="preload" href="AstraClock.png">
   <link rel="preload" href="JS.js.png">
   <link rel="preload" href="text.png">
-  <link rel="preload" href="AbrilFatface-Regular.ttf"
+  <link rel="preload" href="AbrilFatface-Regular.ttf">
+  <link rel="preload" href="Gay_Pride_Flag.svg.png">
   <body>
   </body>
 </html>
