--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
   <link rel="preload" href="text.png">
   <link rel="preload" href="AbrilFatface-Regular.ttf">
   <link rel="preload" href="Gay_Pride_Flag.svg.png">
+  <link rel="preload" href="rules.png">
   <body>
   </body>
 </html>
