--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
   <link rel="preload" href="AbrilFatface-Regular.ttf">
   <link rel="preload" href="Gay_Pride_Flag.svg.png">
   <link rel="preload" href="rules.png">
+  <link rel="preload" href="gi_icon.png">
   <body>
   </body>
 </html>
