--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
   <link rel="preload" href="Gay_Pride_Flag.svg.png">
   <link rel="preload" href="rules.png">
   <link rel="preload" href="gi_icon.png">
+  <link rel="preload" href="resource.zip">
   <body>
   </body>
 </html>
